--- a/_includes/editables/ingresos/index/recaudacion.html
+++ b/_includes/editables/ingresos/index/recaudacion.html
@@ -1,4 +1,4 @@
 <h2>Ingresos del Estado por Sector</h2>
 <p>
-  En el gráfico siguiente usted podrá ver los ingresos del estado por sector. Navegue utilizando su ratón para acceder a la información en detalle.
+  En el gráfico siguiente usted podrá ver los ingresos del Estado por sector. Navegue utilizando su ratón para acceder a la información en detalle.
 </p>
